--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
 <div fxLayout="row wrap">
-    <app-login></app-login>
+    <!-- <app-login></app-login> -->
+    <!-- <app-infocard></app-infocard> -->
+     <app-infocard></app-infocard>
+
 </div>
