--- a/src/app/feature/session/master/miscellaneouse-master/make-master/components/make-master-menu/make-master-menu.component.html
+++ b/src/app/feature/session/master/miscellaneouse-master/make-master/components/make-master-menu/make-master-menu.component.html
@@ -37,7 +37,7 @@
 
      
 
-  <!-- #filterInput creates a reference to the input DOM element. -->
+  <!-- #filtrInput creates a reference to the input DOM element. -->
    <!-- On every keyup, you're passing filterInput.value directly — no $event needed. -->
     <!-- It’s cleaner and avoids any typing issue because Angular knows it's an input. --> 
 <ng-container class="mat-elevation-z8">
