--- a/src/app/feature/session/master/snackbar-master/snackbar-master.component.html
+++ b/src/app/feature/session/master/snackbar-master/snackbar-master.component.html
@@ -1,1 +1,5 @@
-<p>snackbar-master works!</p>
+  <div class="data">{{data}}
+      <button mat-icon-button (click)="snackBarRef.dismiss()">
+          <mat-icon>close</mat-icon>
+      </button>
+    </div>
